--- a/templates/agence/home.html.twig
+++ b/templates/agence/home.html.twig
@@ -4,30 +4,22 @@
 
 {% block body %}
 <div class="container text-center my-5">
-<h1>Nos Véhicules</h1>
+<h1>Découvrez la flotte de véhicule chez BestCar</h1>
 </div>
 
 <section class="container" style="display:flex; justify-content: space-around; flex-wrap: wrap;">
 
     {% for vehicule in vehicules %}
 
-    <div class="card text-center mb-4" style="width: 25rem;">
-        <img src="{{ asset('images/vehicules/' ~ vehicule.image) }}" class="card-img-top" alt="image du vehicule" style="height: 300px;">
-        <div class="card-body">
-            <h5 class="card-title">{{ vehicule.title }}</h5>
-            <p class="card-text my-3">{{ vehicule.content | slice(0, 200) | raw }}</p>
+    <div class="card text-center mb-4" style="width: 25rem; height: 350px;">
+    <a href="{{ path('agence_show', {"id" : vehicule.id }) }}" style="text-decoration: none; color: inherit;">
+        <span class="badge rounded-pill text-bg-primary"><i class="fa-solid fa-tag"></i> {{ vehicule.price }} € / jour</span>
+        <img src="{{ asset('images/vehicules/' ~ vehicule.image) }}" class="card-img-top" alt="image du vehicule" style="height: 350px; object-fit: cover; border-radius: 0.375rem;">
+        <div class="card-body pb-0" style="margin-top: -80px;">
+            <h5 class="card-title" style="color: white; font-weight: bold;">{{ vehicule.title }}</h5>
+            {# <p class="card-text my-3">{{ vehicule.content | slice(0, 200) | raw }}</p> #}
         </div>
-        <table class="table table-bordered">
-            <tbody>
-                <tr>
-                    <th scope="row"><i class="fa-regular fa-calendar"></i> Publié le {{ vehicule.createdAt | date('d/m/Y') }}</th>
-                    <th scope="row"><span class="badge rounded-pill text-bg-primary"><i class="fa-solid fa-tag"></i> {{ vehicule.price }} € / jour</span></th>
-                </tr>
-            </tbody>
-        </table>
-        <div class="card-footer">
-            <a href="{{ path('agence_show', {"id" : vehicule.id }) }}" class="btn btn-primary" style="background: #FF6E14; color: white;">Réserver</a>
-        </div>
+    </a>
     </div>
 
 
