--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,31 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-            * {
-                font-family: 'Roboto', sans-serif;
-            }
-            h1,h2,h3 {
-                text-transform: uppercase;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-            h2 {
-                font-size: 1rem;
-            }
-            th, td {
-                vertical-align: middle;
-            }
-            .header_logo {
-                width: 54px;
-                height: 54px;
-            }
-            .btn {
-                background: #FF6E14;
-            }
-        </style>
+        <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}">
     {% endblock %}
 
 </head>
@@ -102,14 +78,6 @@
     {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
-    <script>
-        $(document).ready(function () {
-            // you may need to change this code if you are not using Bootstrap Datepicker
-            $('.datepicker').datepicker({
-                format: 'yyyy-mm-dd'
-            });
-        });
     </script>
     {% endblock %}
 </body>
